# go4py

./: .gitignore  Makefile  README.md  generate_wrapper.py  go.mod  go.sum  pyproject.toml  sudoku
docs/: benchmark.md  documentation.md
examples/benchmarks/: Makefile  __init__.pyi  py_bench.py  py_md5.py  py_sudoku.py
examples/benchmarks/artifacts/: functions.json
examples/benchmarks/cpython-extention/: autogen_bindings.c
examples/benchmarks/src/: main.go  md5.go  md5_hash.go  sudoku.go
examples/custom_fn/: Makefile  __init__.pyi  goopy.yaml
examples/custom_fn/artifacts/: functions.json
examples/custom_fn/cpython-extention/: autogen_bindings.c  custom.c  custom.h
examples/go_cool/: Makefile  __init__.pyi  cool.go  cooler.go  goopy.yaml
examples/go_cool/artifacts/: functions.json  go_cool_wrappers.c
examples/go_cool/cpython-extention/: autogen_bindings.c  other.c  other.h
examples/go_cool/src/: cool.go  cooler.go
examples/memLeakTests/: Makefile  __init__.pyi  simple-func.go  test.ipynb  test.py
examples/memLeakTests/artifacts/: functions.json
examples/msgPack/: Makefile  __init__.pyi  usage.py
examples/msgPack/src/: main.go
go4py/: cli.py  doc_annotation.py  get_go_functions.py  types.py
go4py/code_gen/: __main__.py  copy_logic.py  file_gen.py  generate_wrapper.py  slice.py
go4py/templates/: .gitignore  Makefile
go_cool/: Makefile
go_pkg/go4py/: main.go
go_pkg/goopy/: goopy.h  main.go
goopy/: __main__.py  cli.py  copy_logic.py  generate_wrapper.py  get_go_functions.py  go_functions.py  parsing.go  prsing.go  types.py
goopy/code_gen/: __main__.py  copy_logic.py  file_gen.py  generate_wrapper.py  slice.py
goopy/templates/: makefile
lib/: cool.go  cooler.go
tests/: test_annotations.py  test_complex_functions.py  test_simple_functions.py  test_var_types.py
wrapper/: go_cool.c
(+7 files in other folders)
