[project]
name = "go-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "ipython>=8.32.0",
    "msgpack>=1.1.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.10",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
